VPC/securitygroup.tf
resource "aws_security_group" security-group1"{
  vpc_id=aws_vpc.vpc-main.id
  name="vpc-main-security-group1"
  description="security group allows ssh"
  egress{
    from_port=0
    to_port=0
    protocol="-1"
    cidr_blocks=["0.0.0.0/0"]
  }

  ingress{
    from_port=22
    to_port=22
    protocol="tcp"
    cidr_blocks=["0.0.0.0/0"]
  }
  tags={
    Name="security-group1"
  }
}
